Continue menu area

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,113 @@
     <link rel="stylesheet" href="style.css">
     <title>Dashboard</title>
 </head>
-<body>
-<div class="container">
-    <div class="menu">
-        Home
-        Profile
-        Messages
-        History
-        Tasks
-        Communities
-    </div>
 
-</div>
+<body>
+    <div class="container">
+        <div class="menu-container">
+            <div class="menu-title"><img src="./icons/dashboard.png" alt="Dashboard icon" />
+                <div>Dashboard</div>
+            </div>
+            <div class="content-menu">
+                <img src="./icons/home.png" alt="Home Icon">
+                <p>Home</p>
+                <img src="./icons/profile.png" alt="Profile Icon">
+                <p>Profile</p>
+                <img src="./icons/messages.png" alt="Message Icon">
+                <p>Messages</p>
+                <img src="./icons/history.png" alt="History Icon">
+                <p>History</p>
+                <img src="./icons/tasks.png" alt="Task Icon">
+                <p>Tasks</p>
+                <img src="./icons/community.png" alt="Community Icon">
+                <p>Communities</p>
+            </div>
+            <div class="options-menu"></div>
+        </div>
+        <div class="content-area">
+            <div class="user-bar">
+                <div class="search-bar">
+                    <img src="./icons/search.png" alt="search Icon">
+                    <input type="text" placeholder="Enter your search"></input>
+                </div>
+                <div class="user-data">
+                    <img src="./icons/alert.png" alt="Alert Icon">
+                    <img src="avatar.png" style="border-radius:50%; max-width:3rem; max-height:3rem;" alt="User avatar">
+                    <div class="user-name">Filip Anto</div>
+                </div>
+                <div class="user-greeting">
+                    <img src="avatar.png" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
+                    <div class="wrapper">
+                        <p>Hi There,</p>
+                        <p>Filip-Anto(@filip-anto)</p>
+                    </div>
+                </div>
+                <div class="user-buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+
+            </div>
+            <div class="content">
+                <h1>Header</h1>
+                <div class="articles">
+                    <article>
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                    </p>
+                    <div>A</div><div>B</div><div>C</div>
+                    </article>
+                    <article>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                    </article>
+                    <article>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                    </article>
+                    <article>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                    </article>
+                    <article>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                    </article>
+                    <article>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
+                        omnis sit at
+                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                    </article>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
+
 </html>
