Complete content area- various improvements needed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
                 <img src="./icons/community.png" alt="Community Icon">
                 <p>Communities</p>
             </div>
-            <div class="options-menu"></div>
+            <div class="options-menu">
+                <img src="./icons/settings.png" alt="History Icon">
+                <p>Settings</p>
+                <img src="./icons/support.png" alt="Task Icon">
+                <p>Support</p>
+                <img src="./icons/privacy.png" alt="Community Icon">
+                <p>Privacy</p>
+
+            </div>
         </div>
         <div class="content-area">
             <div class="user-bar">
@@ -60,57 +68,91 @@
                 <h1>Header</h1>
                 <div class="articles">
                     <article>
+                        <h1>Calculator Project</h1>
                         <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
-                    </p>
-                    <div>A</div><div>B</div><div>C</div>
+                            A simple calculator project created using HTML,CSS and Javascript.
+                        </p>
+                        <div><img src="./icons/favorite.png" alt="Favorite Icon"></div>
+                        <div><a href="https://filip-anto.github.io/calculator"><img src="./icons/view.png" alt="View Icon"></a></div>
+                        <div><div><img src="./icons/fork.png" alt="Fork Icon"></div></div>
                     </article>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        <h1>Etch A Sketch</h1>
+                        <p>
+                            Small project to practice DOM manipulation. It makes use of basic Javascript to achieve its purpose.
+                        </p>
+                        <div><img src="./icons/favorite.png" alt="Favorite Icon"></div>
+                        <div><a href="https://filip-anto.github.io/etch-a-sketch"><img src="./icons/view.png" alt="View Icon"></a></div>
+                        <div><div><img src="./icons/fork.png" alt="Fork Icon"></div></div>
                     </article>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        <h1>Sign up form</h1>
+                        <p>
+                            An example of a sign up form. It features some CSS to make things a bit prettier along with some client side validation. Note: Validation does <em>
+                                not </em> use Javascript apart from password matching.
+                        </p>
+                        <div><img src="./icons/favorite.png" alt="Favorite Icon"></div>
+                        <div><a href="https://filip-anto.github.io/sign-up-form"><img src="./icons/view.png" alt="View Icon"></a></div>
+                        <div><div><img src="./icons/fork.png" alt="Fork Icon"></div></div>
                     </article>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        <h1>Landing Page</h1>
+                        <p>
+                            A landing page- nothing too fancy but it was used to learn the basics of Flexbox.
+                        </p>
+                        <div><img src="./icons/favorite.png" alt="Favorite Icon"></div>
+                        <div><a href="https://filip-anto.github.io/landing-page-project"><img src="./icons/view.png" alt="View Icon"></a></div>
+                        <div><div><img src="./icons/fork.png" alt="Fork Icon"></div></div>
                     </article>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        <h1>Recipe list</h1>
+                        <p>
+                            We all got to start from somewhere I guess!                        
+                        </p>
+                        <div><img src="./icons/favorite.png" alt="Favorite Icon"></div>
+                        <div><a href="https://filip-anto.github.io/odin-recipes"><img src="./icons/view.png" alt="View Icon"></a></div>
+                        <div><div><img src="./icons/fork.png" alt="Fork Icon"></div></div>
                     </article>
                     <article>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi ducimus veniam culpa beatae
-                        omnis sit at
-                        eos, officia numquam vero quis ex animi minus vitae ut consequuntur eligendi quod quaerat.
+                        <h1>Rock Paper Scissors</h1>
+                        <p>
+                            A game of rock-paper-scissors. Nothing more, nothing less!
+                        </p>
+                        <div><img src="./icons/favorite.png" alt="Favorite Icon"></div>
+                        <div><a href="https://filip-anto.github.io/rock-paper-scissors"><img src="./icons/view.png" alt="View Icon"></a></div>
+                        <div><div><img src="./icons/fork.png" alt="Fork Icon"></div></div>
                     </article>
                 </div>
+                <h1>Announcements</h1>
+                <div class="announcements">
+                    <div class="announcement">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde tempora rerum pariatur
+                        perferendis nemo quia porro, iure eum fugit illum sapiente omnis harum, beatae perspiciatis
+                        repudiandae in repellat ea alias?
+                    </div>
+                    <div class="announcement">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde tempora rerum pariatur
+                        perferendis nemo quia porro, iure eum fugit illum sapiente omnis harum, beatae perspiciatis
+                        repudiandae in repellat ea alias?
+                    </div>
+
+                </div>
+                <h1 id="trending">Trending</h1>
+                <div class="trending">
+                    <div class="trend">
+                        <img src="avatar.png" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
+                        <p>Follow me</p>
+                    </div>
+                    <div class="trend">
+                        <img src="avatar.png" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
+                        <p>Follow me</p>
+                    </div>
+                    <div class="trend">
+                        <img src="avatar.png" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
+                        <p>Follow me</p>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
