Add content and fix appearance of announcements area

--- a/index.html
+++ b/index.html
@@ -126,22 +126,26 @@
                 <h1>Announcements</h1>
                 <div class="announcements">
                     <div class="announcement">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde tempora rerum pariatur
-                        perferendis nemo quia porro, iure eum fugit illum sapiente omnis harum, beatae perspiciatis
-                        repudiandae in repellat ea alias?
+                        <h3>It's starting to take shape!</h3>
+                        <p>This page won't win any awards but it's becoming semi-finished!</p>
+                        <hr>
                     </div>
                     <div class="announcement">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde tempora rerum pariatur
-                        perferendis nemo quia porro, iure eum fugit illum sapiente omnis harum, beatae perspiciatis
-                        repudiandae in repellat ea alias?
+                        <h3>Groundwork setup.</h3>
+                        <p>The basic structure is there.</p>
+                        <hr>
                     </div>
-
+                    <div class="announcement">
+                        <h3>Let's hope for the best!</h3>
+                        <p>A new beginning!</p>
+                    </div>
                 </div>
                 <h1 id="trending">Trending</h1>
                 <div class="trending">
                     <div class="trend">
                         <img src="avatar.png" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
                         <p>Follow me</p>
+                        
                     </div>
                     <div class="trend">
                         <img src="avatar.png" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
