Finish trending area

--- a/index.html
+++ b/index.html
@@ -143,17 +143,19 @@
                 <h1 id="trending">Trending</h1>
                 <div class="trending">
                     <div class="trend">
-                        <img src="avatar.png" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
-                        <p>Follow me</p>
-                        
+                        <img src="duck.jpeg" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
+                        <h3>@duck</h3>
+                        <p>"This site hold water"</p>
                     </div>
                     <div class="trend">
-                        <img src="avatar.png" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
-                        <p>Follow me</p>
+                        <img src="sheep.jpeg" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
+                        <h3>@sheep</h3>
+                        <p>"I'd vote this site!"</p>
                     </div>
                     <div class="trend">
-                        <img src="avatar.png" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
-                        <p>Follow me</p>
+                        <img src="frog.jpeg" style="border-radius:50%; max-width:6rem; max-height:6rem;" alt="User avatar">
+                        <h3>@frog</h3>
+                        <p>"Ribbit"</p>
                     </div>
                 </div>
                 
